This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Evolution 1.0.4 ($Rev: 6978 $ - $Date: 2010-06-07 14:14:12 -0500 (Mon, 07 Jun 2010) $)
===================================
--------------------------------------------
Security:
--------------------------------------------
* [#MODX-1964] WebLogin does not prevent brute force attack

--------------------------------------------
Bugfixes:
--------------------------------------------
* [#MODX-1957] Danish language file update
* [#MODX-2018] Fix Multiple TinyMCE plugins activated after upgrade
* [#MODX-1865] 1.02 to 1.03 Upgrade Error with mySQL STRICT mode, "Templates: Incorrect integer value"
* [#MODX-1883] WebLoginSideBar chunk "forget" typo
* [#MODX-1880] Superfluous single quote in tree.php
* [#MODX-1878] Wrong path for _tx_.gif image in multiple files
* [#MODX-1896] Can't properly execute logEvent function when user is not logged in (strict sql mode on)
* [#MODX-1900] Fixes and tweaks for search.static.php
* [#MODX-1905] Broken paths to images, non valid xhtml tags, unmatched tags
* [#MODX-1884] Bug in breadcrumbs 1.0.1
* [#MODX-1833] Incorrect rendering of module parameters for 'list-multi' type
* [#MODX-1920] Problem with Ditto and server time offset
* [#MODX-1925] WebLogin loses GET request elements if you have to login before getting to the page
* [#MODX-1926] Revert Cache Sync tokenization updates due to inconsistencies across PHP environments
* [#MODX-1893] Code registered with "regClientHTMLBlock" not inserted in cached documents
* [#MODX-1906] Put duplicate button on resource edit page
* [#MODX-1814] Irregular character string in QuickManager class
* [#MODX-1003] Removed font: Icon; from sortabletable class to let normal font-size view. [#MODX-1818]
* [#MODX-1874] Minor error in dbapi and debug