@@ -19,9 +19,7 @@ switch ((int) $_REQUEST['a']) {
 		$e->dumpError();
 }
 
-if (isset($_REQUEST['id']))
-        $id = (int)$_REQUEST['id'];
-else    $id = 0;
+$id = $_REQUEST['id'];
 
 if ($manager_theme)
         $manager_theme .= '/';
@@ -47,7 +45,7 @@ if ($limit > 1) {
 }
 
 $content = array();
-if (isset($_REQUEST['id']) && $_REQUEST['id']!='' && is_numeric($_REQUEST['id'])) {
+if ($id > 0) {
 	$sql = 'SELECT * FROM '.$tbl_site_htmlsnippets.' WHERE id=\''.$id.'\'';
 	$rs = mysql_query($sql);
 	$limit = mysql_num_rows($rs);
