@@ -5,11 +5,7 @@ if(!$modx->hasPermission('exec_module')) {
 	$e->dumpError();	
 }
 
-if(isset($_REQUEST['id'])) {
-	$id = intval($_REQUEST['id']);
-} else {
-	$id=0;
-}
+$id = $_REQUEST['id'];
 
 // make sure the id's a number
 if(!is_numeric($id)) {
