@@ -1,7 +1,7 @@
 This file shows the changes in recent releases of MODx. The most current release is usually the 
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
-MODx Evolution 1.0.4 ($Rev: 6978 $ - $Date: 2010-06-07 14:14:12 -0500 (Mon, 07 Jun 2010) $)
+MODx Evolution 1.0.4r1 ($Rev: 6995 $ - $Date: 2010-06-15 03:56:24 +0900
 ===================================
 --------------------------------------------
 Security:
@@ -11,7 +11,7 @@ Security:
 --------------------------------------------
 Bugfixes:
 --------------------------------------------
-* [#MODX-1957] Danish language file update
+* [#MODX-2065] View Template manager page can show error message if user tampers with URL
 * [#MODX-2018] Fix Multiple TinyMCE plugins activated after upgrade
 * [#MODX-1865] 1.02 to 1.03 Upgrade Error with mySQL STRICT mode, "Templates: Incorrect integer value"
 * [#MODX-1883] WebLoginSideBar chunk "forget" typo
@@ -190,6 +190,7 @@ Bugfixes:
 * [#MODX-1338] Alias field accepts percent character
 * [#MODX-1215] Unixtime widget uses wrong pattern for MySQL date string
 * [#MODX-1364] Add check for tokenizer extension in cache_sync processor
+* [#MODX-1367] SQL duplicate id when duplicating minimal template
 
 --------------------------------------------
 Additional Improvements & Updates:
